--- a/08-exemple-python.html
+++ b/08-exemple-python.html
@@ -13235,7 +13235,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.collections.PathCollection at 0x7effef5b7c40&gt;</pre>
+<pre>&lt;matplotlib.collections.PathCollection at 0x7f18584b1520&gt;</pre>
 </div>
 
 </div>
