--- a/08-exemple-python.slides.html
+++ b/08-exemple-python.slides.html
@@ -13360,7 +13360,7 @@ a.anchor-link {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.collections.PathCollection at 0x7f18584b1520&gt;</pre>
+<pre>&lt;matplotlib.collections.PathCollection at 0x7f5dd8f52ee0&gt;</pre>
 </div>
 
 </div>
