deploy: 27ce58d759cb2c136c8d07327a93ee3016716c2c

--- a/08-exemple-python.html
+++ b/08-exemple-python.html
@@ -14402,7 +14402,7 @@ a.anchor-link {
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>&lt;matplotlib.collections.PathCollection at 0x7f4012216340&gt;</pre>
+<pre>&lt;matplotlib.collections.PathCollection at 0x7f3d7a4ab340&gt;</pre>
 </div>
 
 </div>
