--- a/08-exemple-python.slides.html
+++ b/08-exemple-python.slides.html
@@ -14539,7 +14539,7 @@ div.jp-OutputPrompt {
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>&lt;matplotlib.collections.PathCollection at 0x7f4012216340&gt;</pre>
+<pre>&lt;matplotlib.collections.PathCollection at 0x7f3d7a4ab340&gt;</pre>
 </div>
 
 </div>
