deploy: f2cd4154ad8cbfb37dc7beb319b3d5a1cfb1c207

--- a/02-gitbasics.slides.html
+++ b/02-gitbasics.slides.html
@@ -15259,12 +15259,10 @@ git merge origin/master
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
 <pre>Your branch is up to date with &#39;origin/master&#39;.
-Updating 27ce58d..58bbaa6
+Updating f2cd415..58bbaa6
 Fast-forward
- Dockerfile   | 3 ---
  nbcourse.yml | 2 +-
- 2 files changed, 1 insertion(+), 4 deletions(-)
- delete mode 100644 Dockerfile
+ 1 file changed, 1 insertion(+), 1 deletion(-)
 </pre>
 </div>
 </div>
@@ -15278,7 +15276,7 @@ Fast-forward
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr">
 <pre>Switched to branch &#39;master&#39;
 From https://github.com/pnavaro/agrocampus
-   27ce58d..58bbaa6  master     -&gt; origin/master
+   f2cd415..58bbaa6  master     -&gt; origin/master
  * [new branch]      gh-pages   -&gt; origin/gh-pages
 </pre>
 </div>
@@ -15316,12 +15314,10 @@ git merge master
 
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
-<pre>Updating 27ce58d..58bbaa6
+<pre>Updating f2cd415..58bbaa6
 Fast-forward
- Dockerfile   | 3 ---
  nbcourse.yml | 2 +-
- 2 files changed, 1 insertion(+), 4 deletions(-)
- delete mode 100644 Dockerfile
+ 1 file changed, 1 insertion(+), 1 deletion(-)
 </pre>
 </div>
 </div>
