deploy: 58bbaa6afe2c5b2e9294ce5bb322c1fdcf978273

--- a/02-gitbasics.slides.html
+++ b/02-gitbasics.slides.html
@@ -15259,10 +15259,7 @@ git merge origin/master
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
 <pre>Your branch is up to date with &#39;origin/master&#39;.
-Updating f2cd415..58bbaa6
-Fast-forward
- nbcourse.yml | 2 +-
- 1 file changed, 1 insertion(+), 1 deletion(-)
+Already up to date.
 </pre>
 </div>
 </div>
@@ -15276,7 +15273,6 @@ Fast-forward
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr">
 <pre>Switched to branch &#39;master&#39;
 From https://github.com/pnavaro/agrocampus
-   f2cd415..58bbaa6  master     -&gt; origin/master
  * [new branch]      gh-pages   -&gt; origin/gh-pages
 </pre>
 </div>
@@ -15314,10 +15310,7 @@ git merge master
 
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
-<pre>Updating f2cd415..58bbaa6
-Fast-forward
- nbcourse.yml | 2 +-
- 1 file changed, 1 insertion(+), 1 deletion(-)
+<pre>Already up to date.
 </pre>
 </div>
 </div>
